Refactor algorithm classes
- An intermediary abstract class is introduced.
- Duplicate code in algorithm classes is extracted into the parent class.
- Generation count is now incremented in listener classes.