@@ -5,37 +5,33 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Random;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import org.zafer.wflopalgorithms.algorithms.lshade.solution.LSHADEIndividual;
+import org.zafer.wflopalgorithms.common.AbstractMetaheuristic;
 import org.zafer.wflopcore.power.PowerCalculator;
-import org.zafer.wflopmetaheuristic.listener.ProgressListener;
-import org.zafer.wflopmetaheuristic.Metaheuristic;
-import org.zafer.wflopmetaheuristic.ProgressEvent;
+import org.zafer.wflopcore.wake.DefaultWakeModelProvider;
+import org.zafer.wflopcore.wake.WakeOptimization;
 import org.zafer.wflopmetaheuristic.Solution;
-import org.zafer.wflopmetaheuristic.termination.TerminationCondition;
 import org.zafer.wflopmetaheuristic.termination.TerminationConditionConfig;
 import org.zafer.wflopmetaheuristic.termination.TerminationConditionFactory;
-import org.zafer.wflopmetaheuristic.termination.TerminationProgress;
 import org.zafer.wflopmodel.layout.TurbineLayout;
 import org.zafer.wflopmodel.problem.WFLOP;
 
-public class LSHADE implements Metaheuristic {
+public class LSHADE extends AbstractMetaheuristic {
 
-    private final String algorithm;
     private final int maxPopulationSize;
     private final int minPopulationSize = 4;
     private final int H = 5; // memory size
 
-    private final TerminationCondition terminationCondition;
-    private final Random random;
-
-    private double[] MF;
-    private double[] MCR;
+    private final double[] MF;
+    private final double[] MCR;
     private int memoryIndex = 0;
+
+    private List<LSHADEIndividual> population;
+    private LSHADEIndividual bestIndividual;
 
     @JsonCreator
     public LSHADE(
@@ -43,150 +39,107 @@ public class LSHADE implements Metaheuristic {
         @JsonProperty("populationSize") int populationSize,
         @JsonProperty("termination") TerminationConditionConfig terminationConfig
     ) {
-        this.algorithm = algorithm;
+        super(TerminationConditionFactory.fromConfig(terminationConfig));
+
         this.maxPopulationSize = populationSize;
-        this.terminationCondition = TerminationConditionFactory.fromConfig(terminationConfig);
-        this.random = new Random();
 
-        MF = new double[H];
-        MCR = new double[H];
-        Arrays.fill(MF, 0.5);
-        Arrays.fill(MCR, 0.5);
-    }
-
-    public void setSeed(long seed) {
-        random.setSeed(seed);
+        this.MF = new double[H];
+        this.MCR = new double[H];
+        Arrays.fill(this.MF, 0.5);
+        Arrays.fill(this.MCR, 0.5);
     }
 
     @Override
-    public Solution run(WFLOP problem) {
-        PowerCalculator calculator = new PowerCalculator(problem);
-        return runInternal(problem, calculator, Collections.emptyList());
-    }
-
-    @Override
-    public Solution runWithListeners(
-        WFLOP problem,
-        List<ProgressListener> listeners
-    ) {
-        PowerCalculator calculator = new PowerCalculator(problem);
-        return runInternal(problem, calculator, listeners);
-    }
-
-    private Solution runInternal(
-        WFLOP problem,
-        PowerCalculator calculator,
-        List<ProgressListener> listeners
-    ) {
-        terminationCondition.onStart();
-
-        List<LSHADEIndividual> population = initializePopulation(problem);
-        evaluatePopulation(population, problem, calculator);
-
-        LSHADEIndividual best = getBest(population);
-
-        double totalPowerWithoutWake = calculator.calculateTotalPowerWithoutWake(
-            problem.getNumberOfTurbines()
+    protected PowerCalculator createPowerCalculator() {
+        return new PowerCalculator(
+            getProblem(),
+            new DefaultWakeModelProvider(),
+            WakeOptimization.NONE
         );
-        int gen = 0;
-        while (!terminationCondition.shouldTerminate()) {
+    }
 
-            int targetSize = computePopulationSize();
-            List<LSHADEIndividual> nextPop = new ArrayList<>();
+    @Override
+    protected void init() {
+        initializePopulation();
+        evaluatePopulation();
 
-            List<Double> successfulF = new ArrayList<>();
-            List<Double> successfulCR = new ArrayList<>();
-            List<Double> fitnessGains = new ArrayList<>();
+        this.bestIndividual = getBest();
+    }
 
-            for (int i = 0; i < population.size(); i++) {
-                LSHADEIndividual xi = population.get(i);
-                sampleParameters(xi);
+    @Override
+    protected void step() {
+        int targetSize = computePopulationSize();
+        List<LSHADEIndividual> nextPop = new ArrayList<>();
 
-                double[] trial = generateTrial(population, xi);
-                enforceBounds(trial, problem.getCellCount());
+        List<Double> successfulF = new ArrayList<>();
+        List<Double> successfulCR = new ArrayList<>();
+        List<Double> fitnessGains = new ArrayList<>();
 
-                double trialFitness = evaluate(trial, problem, calculator);
+        for (int i = 0; i < population.size(); i++) {
+            LSHADEIndividual xi = population.get(i);
+            sampleParameters(xi);
 
-                if (trialFitness > xi.getFitness()) {
-                    LSHADEIndividual child = new LSHADEIndividual(trial);
-                    child.setFitness(trialFitness);
-                    nextPop.add(child);
+            double[] trial = generateTrial(population, xi);
+            enforceBounds(trial, getProblem().getCellCount());
 
-                    successfulF.add(xi.getF());
-                    successfulCR.add(xi.getCR());
-                    fitnessGains.add(trialFitness - xi.getFitness());
-                } else {
-                    nextPop.add(xi);
-                }
-            }
+            double trialFitness = evaluate(trial);
 
-            updateMemories(successfulF, successfulCR, fitnessGains);
+            if (trialFitness > xi.getFitness()) {
+                LSHADEIndividual child = new LSHADEIndividual(trial);
+                child.setFitness(trialFitness);
+                nextPop.add(child);
 
-            population = reducePopulation(nextPop, targetSize);
-            best = getBest(population);
-
-            terminationCondition.onGeneration(++gen);
-            if (!listeners.isEmpty()) {
-                double avg = population
-                    .stream()
-                    .mapToDouble(LSHADEIndividual::getFitness)
-                    .average()
-                    .orElse(0);
-
-                TerminationProgress tp = terminationCondition.getProgress();
-
-                ProgressEvent event = new ProgressEvent(
-                    gen,
-                    best.getFitness(),
-                    avg,
-                    totalPowerWithoutWake,
-                    tp
-                );
-
-                for (ProgressListener listener : listeners) {
-                    listener.onIteration(event);
-                }
+                successfulF.add(xi.getF());
+                successfulCR.add(xi.getCR());
+                fitnessGains.add(trialFitness - xi.getFitness());
+            } else {
+                nextPop.add(xi);
             }
         }
 
-        return best;
+        updateMemories(successfulF, successfulCR, fitnessGains);
+
+        this.population = reducePopulation(nextPop, targetSize);
+        this.bestIndividual = getBest();
     }
 
-    private List<LSHADEIndividual> initializePopulation(WFLOP problem) {
-        List<LSHADEIndividual> population = new ArrayList<>();
+    @Override
+    protected Solution getBestSolution() {
+        return this.bestIndividual;
+    }
 
-        int turbines = problem.getNumberOfTurbines();
-        int cellCount = problem.getCellCount();
+    private void initializePopulation() {
+        this.population = new ArrayList<>();
 
-        for (int i = 0; i < maxPopulationSize; i++) {
+        int turbines = getProblem().getNumberOfTurbines();
+        int cellCount = getProblem().getCellCount();
+
+        for (int i = 0; i < this.maxPopulationSize; i++) {
             double[] vector = new double[turbines];
             for (int d = 0; d < turbines; d++) {
-                vector[d] = random.nextDouble() * cellCount;
+                vector[d] = getRandom().nextDouble() * cellCount;
             }
-            population.add(new LSHADEIndividual(vector));
+            this.population.add(new LSHADEIndividual(vector));
         }
-
-        return population;
     }
 
     private void sampleParameters(LSHADEIndividual ind) {
-        int r = random.nextInt(H);
+        int r = getRandom().nextInt(H);
 
         /* === Scale factor F: Cauchy distribution === */
         double F;
         do {
-            F = MF[r] + 0.1 * Math.tan(Math.PI * (random.nextDouble() - 0.5));
+            F = MF[r] + 0.1 * Math.tan(Math.PI * (getRandom().nextDouble() - 0.5));
         } while (F <= 0.0);
         F = Math.min(F, 1.0);
 
         /* === Crossover rate CR: Normal distribution === */
-        double CR = MCR[r] + 0.1 * random.nextGaussian();
-        CR = Math.max(0.0, Math.min(1.0, CR));
+        double CR = MCR[r] + 0.1 * getRandom().nextGaussian();
+        CR = Math.clamp(CR, 0.0, 1.0);
 
         ind.setF(F);
         ind.setCR(CR);
     }
-
 
     private double[] generateTrial(
         List<LSHADEIndividual> pop,
@@ -198,21 +151,21 @@ public class LSHADE implements Metaheuristic {
                 .sorted(Comparator.comparingDouble(LSHADEIndividual::getFitness).reversed())
                 .toList();
 
-        LSHADEIndividual pbest = sorted.get(random.nextInt(p));
+        LSHADEIndividual pbest = sorted.get(getRandom().nextInt(p));
 
         LSHADEIndividual r1, r2;
         do {
-            r1 = pop.get(random.nextInt(pop.size()));
+            r1 = pop.get(getRandom().nextInt(pop.size()));
         } while (r1 == xi);
         do {
-            r2 = pop.get(random.nextInt(pop.size()));
+            r2 = pop.get(getRandom().nextInt(pop.size()));
         } while (r2 == xi || r2 == r1);
 
         double[] trial = new double[xi.getVector().length];
-        int jRand = random.nextInt(trial.length);
+        int jRand = getRandom().nextInt(trial.length);
 
         for (int j = 0; j < trial.length; j++) {
-            if (random.nextDouble() < xi.getCR() || j == jRand) {
+            if (getRandom().nextDouble() < xi.getCR() || j == jRand) {
                 trial[j] =
                     xi.getVector()[j]
                         + xi.getF() * (pbest.getVector()[j] - xi.getVector()[j])
@@ -225,17 +178,13 @@ public class LSHADE implements Metaheuristic {
         return trial;
     }
 
-    private double evaluate(
-        double[] vector,
-        WFLOP problem,
-        PowerCalculator calculator
-    ) {
-        int[] layout = discretize(vector, problem);
+    private double evaluate(double[] vector) {
+        int[] layout = discretize(vector, getProblem());
         List<Integer> list = Arrays.stream(layout)
             .boxed()
             .toList();
         TurbineLayout tl = new TurbineLayout(new ArrayList<>(list));
-        return calculator.calculateTotalPower(tl);
+        return getPowerCalculator().calculateTotalPower(tl);
     }
 
     private int[] discretize(double[] vector, WFLOP problem) {
@@ -245,7 +194,7 @@ public class LSHADE implements Metaheuristic {
 
         for (int i = 0; i < vector.length; i++) {
             int cell = (int) Math.floor(vector[i]);
-            cell = Math.max(0, Math.min(cell, cellCount - 1));
+            cell = Math.clamp(cell, 0, cellCount - 1);
 
             while (occupied[cell]) {
                 cell = (cell + 1) % cellCount;
@@ -283,12 +232,10 @@ public class LSHADE implements Metaheuristic {
     }
 
     private int computePopulationSize() {
-        double progress = terminationCondition.getProgress().getProgress();
         // progress ∈ [0, 1]
-
         int size = (int) Math.floor(
             minPopulationSize
-            + (maxPopulationSize - minPopulationSize) * (1.0 - progress)
+            + (maxPopulationSize - minPopulationSize) * (1.0 - getProgress())
         );
 
         return Math.max(minPopulationSize, size);
@@ -314,17 +261,13 @@ public class LSHADE implements Metaheuristic {
         }
     }
 
-    private void evaluatePopulation(
-        List<LSHADEIndividual> pop,
-        WFLOP problem,
-        PowerCalculator calculator
-    ) {
-        for (LSHADEIndividual ind : pop) {
-            ind.setFitness(evaluate(ind.getVector(), problem, calculator));
+    private void evaluatePopulation() {
+        for (LSHADEIndividual ind : this.population) {
+            ind.setFitness(evaluate(ind.getVector()));
         }
     }
 
-    private LSHADEIndividual getBest(List<LSHADEIndividual> pop) {
-        return Collections.max(pop, Comparator.comparingDouble(LSHADEIndividual::getFitness));
+    private LSHADEIndividual getBest() {
+        return Collections.max(this.population, Comparator.comparingDouble(LSHADEIndividual::getFitness));
     }
 }
